PROJECT(LIBCSV)


SET(LIBCSV_PACKAGE_VERSION_MAJOR 3)
SET(LIBCSV_PACKAGE_VERSION_MINOR 0)
SET(LIBCSV_PACKAGE_VERSION_PATCH 3)
SET(LIBCSV_PACKAGE_VERSION_FULL "${LIBCSV_PACKAGE_VERSION_MAJOR}.${LIBCSV_PACKAGE_VERSION_MINOR}.${LIBCSV_PACKAGE_VERSION_PATCH}")
SET(CPACK_PACKAGE_NAME "libcsv")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CSV file processing library")

SET(CPACK_PACKAGE_VENDOR "")
SET(CPACK_PACKAGE_VERSION_MAJOR ${LIBCSV_PACKAGE_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${LIBCSV_PACKAGE_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${LIBCSV_PACKAGE_VERSION_PATCH})
SET(CPACK_PACKAGE_CONTACT "rgamble99@gmail.com")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "libcvs-${LIBCSV_PACKAGE_VERSION_FULL}")
SET(CPACK_MONOLITHIC_INSTALL ON)
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_RELOCATABLE OFF)

OPTION(LIBCSV_BUILD_SHARED_LIB   "Build libcsv shared library"        OFF)

IF(LIBCSV_BUILD_SHARED_LIB)
  SET(LIBRARY_TYPE SHARED)
  SET(LIBRARY_INSTALL LIBRARY)
ELSE(LIBCSV_BUILD_SHARED_LIB)
  SET(LIBRARY_TYPE STATIC)
  SET(LIBRARY_INSTALL ARCHIVE)
ENDIF(LIBCSV_BUILD_SHARED_LIB)

cmake_minimum_required(VERSION 2.8)
enable_language(C)


INCLUDE(CTest)
ENABLE_TESTING()

SET(HEADERS csv.h )
SET(EXPORTED_TARGETS "LIBCSV-targets")


SET (LIBCSV_INSTALL_BIN_DIR bin)
SET (LIBCSV_INSTALL_LIB_DIR lib${LIB_SUFFIX})
SET (LIBCSV_INSTALL_INCLUDE_DIR include)
SET (LIBCSV_INSTALL_DATA_DIR share)

SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX})

ADD_LIBRARY(csv ${LIBRARY_TYPE} ${HEADERS}  libcsv.c )

INSTALL(FILES   ${HEADERS}  DESTINATION  ${LIBCSV_INSTALL_INCLUDE_DIR} COMPONENT headers )

INSTALL(
    TARGETS 
      csv
    EXPORT
      ${EXPORTED_TARGETS} 
    LIBRARY DESTINATION ${LIBCSV_INSTALL_LIB_DIR} COMPONENT libraries
    ARCHIVE DESTINATION ${LIBCSV_INSTALL_LIB_DIR} COMPONENT libraries
    RUNTIME DESTINATION ${LIBCSV_INSTALL_LIB_DIR} COMPONENT libraries
)

IF(BUILD_TESTING)
  ADD_EXECUTABLE(test_csv test_csv.c)
  TARGET_LINK_LIBRARIES(test_csv csv)
  ADD_TEST(test_csv test_csv)
ENDIF(BUILD_TESTING)


# according to http://www.cmake.org/pipermail/cmake/2011-November/047137.html it's better to put this in the end
INCLUDE(CPack)
